<resources>
    <string name="app_name">BomDa</string>
    <string name="school_name">海南师范大学</string>
    <string name="app_logo">APP Logo</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mine_login_title">登录邦达，享受更好体验</string>
    <string name="action_settings">Settings</string>
    <string name="activity_binding">绑定</string>
    <string name="activity_educational">教务在线</string>
    <string name="activity_setting">设置</string>
    <string name="activity_announcement">校园公告</string>
    <string name="activity_grade">成绩</string>
    <string name="activity_schedule">课表</string>
    <string name="activity_news">校园资讯</string>
    <string name="activity_time">时间</string>
    <string name="activity_test">考试</string>
    <string name="activity_postTease">发布树洞</string>
    <string name="activity_postMarket">发布</string>
    <string name="activity_collection">我的收藏</string>
    <string name="activity_library">图书馆新闻</string>
    <string name="activity_focus">我的关注</string>
    <string name="activity_friend">我的好友</string>
    <string name="activity_buys">我的购买</string>
    <string name="activity_dynamic">我的发布</string>
    <string name="activity_nearby">附近的人</string>
    <string name="activity_calendar">2017-2018校历</string>
    <string name="activity_focus_no">还没有关注的呦</string>
    <string name="activity_test_no">还没有考试呦</string>
    <string name="main_drawer_situation">学校概况</string>
    <string name="main_drawer_grade">成绩</string>
    <string name="main_drawer_like">表白墙</string>
    <string name="main_drawer_service">服务</string>
    <string name="main_drawer_announcement">校园公告</string>
    <string name="main_drawer_calendar">校历</string>
    <string name="main_drawer_schedule">课表</string>
    <string name="main_drawer_evaluation">教学评价</string>
    <string name="main_drawer_life">微圈</string>
    <string name="main_drawer_news">资讯</string>
    <string name="main_drawer_time">考试</string>
    <string name="main_drawer_friends">我的好友</string>
    <string name="main_drawer_nearby">附近的人</string>
    <string name="main_drawer_Communicate">更多</string>
    <string name="main_drawer_library">图书馆</string>
    <string name="main_drawer_tool">设置</string>
    <string name="main_drawer_about">关于</string>
    <string name="main_drawer_exit">注销</string>
    <string name="home_announcement_activity">校园活动</string>
    <string name="home_tips">小提示</string>
    <string name="home_weather">天气</string>
    <string name="item_activity_name">活动名</string>
    <string name="item_activity_info">活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍</string>
    <string name="item_activity_sponsor">14软件工程</string>
    <string name="item_activity_time">2018/5/6</string>
    <string name="item_activity_address">曾宪云报告厅</string>
    <string name="item_activity_symbol_one">(</string>
    <string name="item_activity_symbol_two">)</string>
    <string name="main_homing_activity">寻物招领</string>
    <string name="main_bottom">已经到底部了呦</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_life">探索</string>
    <string name="navigation_mine">我的</string>
    <string name="grade_title_name">课程</string>
    <string name="grade_title_grade">分数</string>
    <string name="life_write_dynamic">树洞</string>
    <string name="life_write_market">跳骚市场</string>
    <string name="home_search">搜索资讯/用户/活动</string>
    <string name="life_search">搜索闲物/用户/专题</string>
    <string name="mine_nick">用户昵称</string>
    <string name="mine_location">海南海口</string>
    <string name="mine_dynamic">我的动态</string>
    <string name="mine_post">我的发布</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_focus">我的关注</string>
    <string name="mine_friends">我的好友</string>
    <string name="mine_buys">我的购买</string>
    <string name="mine_nearby">附近的人</string>
    <string name="mine_logout_title">登录更精彩</string>
    <string name="mine_login_txt">现在去登录</string>
    <string name="mine_num">0</string>
    <string name="mine_dynamic_title">动态</string>
    <string name="mine_love_title">获赞</string>
    <string name="mine_collection_title">收藏</string>
    <string name="mine_focus_title">关注</string>
    <string name="mine_look">查看或编辑个人主页</string>
    <string name="nav_number">201424070133</string>
    <string name="nav_nick">Somnus</string>
    <string name="nav_location">美兰区</string>
    <string name="nav_temperature">16</string>
    <string name="nav_symbol">℃</string>
    <string name="nav_update_time">刚刚更新</string>
    <string name="nav_weather">晴</string>
    <string name="nav_aqi">良好</string>
    <string name="nav_prompt">温馨提示:</string>
    <string name="nav_prompt_content">未来两小时不会下雨，放心出门吧</string>
    <string name="activity_calendar_one">第一学期</string>
    <string name="activity_calendar_two">第二学期</string>
    <string name="login_logo">登录</string>
    <string name="login_phone">手机登录</string>
    <string name="login_other">其他方式登录</string>
    <string name="login_register_text">还没有账号？</string>
    <string name="login_register">立即注册</string>
    <string name="login_qq_binding">绑定手机号</string>
    <string name="login_qq_code">发送验证码</string>
    <string name="login_username_logo">用户名(手机号)</string>
    <string name="login_password_logo">密码</string>
    <string name="login_password_hint">至少六位密码</string>
    <string name="login_password_forget">忘记密码?</string>
    <string name="login_login">登录</string>
    <string name="login_password">密码登录</string>
    <string name="login_code">验证码登录</string>
    <string name="login_new_password">输入验证码以及新密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="dialog_progress_error_msg">错误信息：(%1$d) %2$s。</string>
    <string name="register_phoneNum_logo">手机号</string>
    <string name="register_title">注册</string>
    <string name="register_phone">手机注册</string>
    <string name="register_agreement">服务协议</string>
    <string name="register_privacy">隐私条款</string>
    <string name="register_txt">注册即代表同意BomDa </string>
    <string name="register_and"> 和 </string>
    <string name="area_code">+86</string>
    <string name="register_next">下一步</string>
    <string name="register_code">输入验证码</string>
    <string name="register_send">短信已发送至+86</string>
    <string name="register_phoneNum">12345678911</string>
    <string name="register_timer">59s后可重发</string>
    <string name="binding_title">提示</string>
    <string name="binding_unbounded">你还没有绑定学号</string>
    <string name="binding_go">现在去绑定</string>
    <string name="binding_no">暂不绑定</string>
    <string name="binding_id">学号</string>
    <string name="binding_password">密码</string>
    <string name="binding_code">验证码</string>
    <string name="binding_binding">绑 定</string>
    <string name="binding_prompt">绑定即同意</string>
    <string name="binding_agreement">《BomDa隐私条款》</string>
    <string name="welcome_logo">BomDa</string>
    <string name="welcome_signature">传承海师、服务海师</string>
    <string name="welcome_s">3s</string>
    <string name="educational_hello">您好：</string>
    <string name="educational_studentName">王小明</string>
    <string name="home_title">公告标题</string>
    <string name="home_unit">发布单位</string>
    <string name="home_time">发布时间</string>
    <string name="home_term">有效期限</string>
    <string name="announcement_title">关于成绩提交后，使用360浏览器不能正常打印输出的解决方法</string>
    <string name="announcement_unit">教务处</string>
    <string name="announcement_time">2016-05-10 10:34:12</string>
    <string name="announcement_term">2019-05-30</string>
    <string name="announcement_symbol_one">[</string>
    <string name="announcement_type">学校公告</string>
    <string name="announcement_symbol_two">]</string>
    <string name="source">来源:</string>
    <string name="time">时间:</string>
    <string name="basic_settings">基本设置</string>
    <string name="notice_settings">通知设置</string>
    <string name="account_settings">账号设置</string>
    <string name="exit_settings">退出账号</string>
    <string name="about_help">关于与帮助</string>
    <string name="propaganda_settings">最终解释权归 BomDa 所有</string>
    <string name="All_rights_reserved">All rights reserved</string>
    <string name="provincial_traffic">省流量模式</string>
    <string name="provincial_traffic_txt">仅在Wi-Fi环境下才会自动加载图片</string>
    <string name="theme_kind">主题皮肤</string>
    <string name="video_playback">视频自动播放</string>
    <string name="video_playback_txt">仅在Wi-Fi环境下视频自动播放</string>
    <string name="night_pattern">自动切换日夜间模式</string>
    <string name="night_pattern_on">开启</string>
    <string name="night_pattern_off">关闭</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_txt">包括图片、音频和视频缓存(共</string>
    <string name="cache_size">3.2MB</string>
    <string name="symbol">)</string>
    <string name="notifications_new_message">新消息提醒</string>
    <string name="notice_prompt">提示音</string>
    <string name="notice_system">系统音效</string>
    <string name="notice_vibration">震动</string>
    <string name="account_security">账号与安全</string>
    <string name="account_security_txt">管理账号安全、修改账号密码等</string>
    <string name="account_blacklist">黑名单</string>
    <string name="account_blacklist_txt">管理黑名单</string>
    <string name="feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_txt">当前版本</string>
    <string name="version">1.0</string>
    <string name="agreement">BomDa协议</string>
    <string name="account_title">BomDa账号</string>
    <string name="account_email">邮箱</string>
    <string name="account_email_txt">绑定邮箱</string>
    <string name="account_phone">手机</string>
    <string name="account_phoneNumber">+86187****5507</string>
    <string name="account_phone_txt">绑定手机</string>
    <string name="account_password">账号密码</string>
    <string name="account_new_password">修改密码</string>
    <string name="account_authenticated">已验证</string>
    <string name="account_verify">尚未验证</string>
    <string name="security_title">账号安全</string>
    <string name="security_equipment">信任设备</string>
    <string name="security_equipment_txt">暂无，现在去设置</string>
    <string name="security_activity">最近历史活动</string>
    <string name="security_activity_number">2次</string>
    <string name="security_activity_txt">活动会话</string>
    <string name="social_title">社交账号</string>
    <string name="social_studentNumBer">海师学号</string>
    <string name="social_sina_WeiBo">新浪微博</string>
    <string name="social_QQ">QQ</string>
    <string name="social_Micro_letter">微信</string>
    <string name="social_not_bound">尚未绑定</string>
    <string name="social_is_bound">已绑定</string>
    <string name="social_not_online">尚未上线</string>
    <string name="blacklist_null">还没有内容</string>
    <string name="item_blacklist_remove">移出黑名单</string>
    <string name="change_title">设置新密码</string>
    <string name="change_new_hint">密码不少于6位</string>
    <string name="change_again">请再次输入密码</string>
    <string name="change_confirm">确定</string>
    <string name="person_nick">小明哒哒哒哒</string>
    <string name="person_focus">我关注的人</string>
    <string name="person_focus_txt">0</string>
    <string name="person_fans">关注我的人</string>
    <string name="person_fans_txt">0</string>
    <string name="person_cover">封面</string>
    <string name="person_editor">编辑个人资料</string>
    <string name="person_introduction">一句话描述一下自己吧</string>
    <string name="person_setting_nick">昵称</string>
    <string name="person_setting_sex_man">男</string>
    <string name="person_setting_sex_woman">女</string>
    <string name="person_setting_introduction">个人介绍</string>
    <string name="person_setting_signature">一句话描述</string>
    <string name="person_setting_industry">行业</string>
    <string name="person_setting_industry_txt">选择行业</string>
    <string name="person_setting_address">居住地</string>
    <string name="person_setting_address_txt">填写居住地</string>
    <string name="WeiTiXie">未填写</string>
</resources>