<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 新密码logo -->
    <TextView
        android:id="@+id/change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/change_title"
        android:textSize="28sp"
        android:textColor="@color/textPrimaryLight"
        android:layout_centerHorizontal="true"/>

    <!-- 新密码输入框 -->
    <EditText
        android:id="@+id/change_new"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/change_title"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/padding_margin"
        android:hint="@string/change_new_hint"/>

    <!-- 再次输入框 -->
    <EditText
        android:id="@+id/change_again"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/change_new"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/padding_margin"
        android:hint="@string/change_again"/>

    <!-- 确定按钮 -->
    <Button
        android:id="@+id/change_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/change_confirm"
        android:textSize="@dimen/txt_medium_size"
        android:layout_below="@+id/change_again"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_confirm_bg"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/padding_margin"/>

</RelativeLayout>
