<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/item_activity_name_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:gravity="center">

            <TextView
                android:id="@+id/item_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/item_activity_name"
                android:textColor="@color/textPrimaryLight"
                android:textSize="@dimen/txt_medium_big_size"/>



        </LinearLayout>


        <TextView
            android:id="@+id/item_activity_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:maxLength="88"
            android:text=""
            android:textSize="@dimen/txt_medium_size"
            android:layout_below="@+id/item_activity_name_lin"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/item_activity_sponsor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="4dp"
                    android:text="@string/item_activity_sponsor"
                    android:textColor="@color/textPrimaryLight"
                    style="@style/font_size_medium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/item_activity_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/item_activity_time"
                        android:textColor="@color/textPrimaryLight"
                        style="@style/font_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_activity_symbol_one"
                        android:layout_marginStart="4dp"
                        android:textSize="@dimen/txt_medium_size"/>

                    <TextView
                        android:id="@+id/item_activity_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_activity_address"
                        android:layout_marginStart="2dp"
                        style="@style/font_size_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:textSize="@dimen/txt_medium_size"
                        android:text="@string/item_activity_symbol_two" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>



</android.support.v7.widget.CardView>
